--- a/ui/vmwindow.ui
+++ b/ui/vmwindow.ui
@@ -121,6 +121,16 @@
                         <signal name="activate" handler="on_details_menu_usb_redirection" swapped="no"/>
                       </object>
                     </child>
+                    <child>
+                      <object class="GtkCheckMenuItem" id="details-menu-auto-clipboard">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="tooltip_text" translatable="yes">Enable or disable clipboard sync with the virtual machine running a SPICE agent.</property>
+                        <property name="label" translatable="yes">Sync _clipboard</property>
+                        <property name="use_underline">True</property>
+                        <signal name="toggled" handler="on_details_menu_autoclipboard_toggled" swapped="no"/>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
